force-app/main/default/objects/CCXR_Order__c/CCXR_Order__c.object-meta.xml
<CustomObject>
    <label>CCXR_Order</label>
    <nameField>
        <displayFormat>O-{0000}</displayFormat>
        <label>CCXR_Order ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CCXR_Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>