force-app/main/default/objects/CCXR_Order__c/fields/CCXR_Customer__c.field-meta.xml
<CustomField>
    <fullName>CCXR_Customer__c</fullName>
    <formula>CCXR_Customer_Table_Status__r.CCXR_Customer__r.CCXR_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CCXR_Customer</label>
    <type>Text</type>
</CustomField>