force-app/main/default/objects/CCXR_Order__c/fields/CCXR_Customer_Table_Status__c.field-meta.xml
<CustomField>
    <fullName>CCXR_Customer_Table_Status__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CCXR_Customer Table Status</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CCXR_Customer_Table_Status__c.Customer_Table_Status__c</field>
            <operation>equals</operation>
            <value>Occupied</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CCXR_Customer_Table_Status__c</referenceTo>
    <relationshipLabel>CCXR_Orders</relationshipLabel>
    <relationshipName>CCXR_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>