force-app/main/default/objects/CCXR_Order__c/fields/CCXR_Customer_Token_Number__c.field-meta.xml
<CustomField>
    <fullName>CCXR_Customer_Token_Number__c</fullName>
    <formula>CCXR_Customer_Table_Status__r.Token_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CCXR_Customer Token Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>