force-app/main/default/objects/CCXR_Order__c/fields/CCXR_Grand_Total__c.field-meta.xml
<CustomField>
    <fullName>CCXR_Grand_Total__c</fullName>
    <label>CCXR_Grand Total</label>
    <summarizedField>CCXR_Order_Line_Item__c.CCXR_New_Total__c</summarizedField>
    <summaryForeignKey>CCXR_Order_Line_Item__c.CCXR_Order_ID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>