force-app/main/default/objects/CCXR_Order__c/fields/CCXR_Net_Total__c.field-meta.xml
<CustomField>
    <fullName>CCXR_Net_Total__c</fullName>
    <formula>(CCXR_Grand_Total__c + (CCXR_Grand_Total__c * CCXR_Tax__c )) - (CCXR_Grand_Total__c *  CCXR_OrderDiscount__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CCXR_Net Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>