force-app/main/default/objects/CCXR_Order__c/fields/CCXR_Order_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>CCXR_Order_Date_Time__c</fullName>
    <formula>DATETIMEVALUE(Today())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CCXR_Order Date&amp;Time</label>
    <type>DateTime</type>
</CustomField>