force-app/main/default/objects/CCXR_Order__c/fields/CCXR_Order_Status__c.field-meta.xml
<CustomField>
    <fullName>CCXR_Order_Status__c</fullName>
    <label>CCXR_Order Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Progress</fullName>
                <default>true</default>
                <label>Progress</label>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>