force-app/main/default/objects/CCXR_Order__c/fields/CCXR_OrderDiscount__c.field-meta.xml
<CustomField>
    <fullName>CCXR_OrderDiscount__c</fullName>
    <formula>IF( 
AND(CCXR_Customer_Table_Status__r.CCXR_Customer__r.CCXR_No_of_Visits__c &gt;1,CCXR_Customer_Table_Status__r.CCXR_Customer__r.CCXR_No_of_Visits__c&lt;=5), 0.05, 
IF( CCXR_Customer_Table_Status__r.CCXR_Customer__r.CCXR_No_of_Visits__c &gt;5,0.10,0)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CCXR_OrderDiscount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>