force-app/main/default/objects/CCXR_Order__c/fields/CCXR_Tax__c.field-meta.xml
<CustomField>
    <fullName>CCXR_Tax__c</fullName>
    <defaultValue>0.08</defaultValue>
    <label>CCXR_Tax</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>