force-app/main/default/objects/CCXR_Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CCXR_Customer_Token_Number__c</columns>
    <columns>CCXR_Order_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>